# based-launcher

./: .eslintrc.json  .gitignore  README.md  electron-builder.json5  index.html  native-plugin.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  coverage.yml  release.yml
.storybook/: preview.tsx
common/: cliFlags.ts  desktop-entries.ts  ipc.ts  launcher.ts  modes.ts
common/tests/: test-utils.ts
electron/: package.json  typings.d.ts
electron/main/: args.test.ts  args.ts  config.ts  desktop-apps.test.ts  desktop-apps.ts  index.ts  input.test.ts  logger.ts  options.test.ts  options.ts
electron/preload/: index.ts
electron/tests/: test-utils.ts
native/: Cargo.toml
native/migrations/2022-10-13-123103_icon_cache/: down.sql  up.sql
native/src/: lib.rs  mac.rs  models.rs  schema.rs
native/src/services/: desktop_apps.rs  linux.rs  mod.rs
native/src/services/database/: connection.rs
native/src/services/desktop_apps/: linux.rs  mac.rs  mod.rs
scripts/: version.js
src/: App.tsx  index.scss  main.tsx
src/bangs/: bangs.ts  calculator.ts  calendar.ts  wikipedia.ts
src/containers/: CustomTheme.tsx  PaletteContainer.tsx
src/contexts/: argsContext.ts
src/hooks/: useArgs.tsx  useBangs.ts  useDesktopEntries.tsx  useFlags.ts  useOptions.tsx
src/layouts/: AppRoot.module.scss  AppRoot.tsx
src/samples/: node-api.ts
src/stories/: BangValue.stories.tsx  BangsArea.stories.tsx  BangsEmptyState.stories.tsx  (+9 more)
themes/: rofi.scss
(+41 files in other folders)
