[package]
name = "based_launcher"
version = "1.0.8"
license = "AGPL-3.0"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "based_launcher"
crate-type = ["cdylib"]

[dependencies]
freedesktop-desktop-entry = "0.5.0"
freedesktop-icons = "0.2.1"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.5"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
